--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": "Connection string",
+  "SFTPSetting": {
+    "Port": "80"
+  },
+  "JwtOptions": {
+    "Issuer": "https://localhost:7004",
+    "Audience": "https://localhost:7004",
+
+    //👇 Used to encrypt and decrypt the jwt token
+    "SigningKey": "some-signing-key-here",
+
+    // token expiration time
+    "ExpirationSeconds": 3600
+  }
+
 }
