--- a/appsettings.json
+++ b/appsettings.json
@@ -5,21 +5,25 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
+    "ConnectionStrings": {
+      "Default": "Data Source=(localdb)\\localdbdemo;Integrated Security=True"
+    },
 
-  "AllowedHosts": "*",
-  "ConnectionStrings": "Connection string",
-  "SFTPSetting": {
-    "Port": "80"
-  },
-  "JwtOptions": {
-    "Issuer": "https://localhost:7004",
-    "Audience": "https://localhost:7004",
+    "AllowedHosts": "*",
+    "ConnectionStrings": "Connection string",
+    "SFTPSetting": {
+      "Port": "80"
+    },
+    "JwtOptions": {
+      "Issuer": "https://localhost:7004",
+      "Audience": "https://localhost:7004",
 
-    //👇 Used to encrypt and decrypt the jwt token
-    "SigningKey": "some-signing-key-here",
+      //👇 Used to encrypt and decrypt the jwt token
+      "SigningKey": "some-signing-key-here",
 
-    // token expiration time
-    "ExpirationSeconds": 3600
+      // token expiration time
+      "ExpirationSeconds": 3600
+    }
+
   }
-
-}
