--- a/appsettings.json
+++ b/appsettings.json
@@ -5,25 +5,32 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  
-    "ConnectionStrings": {
-      "Default": "Data Source=(localdb)\\localdbdemo;Integrated Security=True"
-    },
 
-    "AllowedHosts": "*",
-    "ConnectionStrings": "Connection string",
-    "SFTPSetting": {
-      "Port": "80"
-    },
-    "JwtOptions": {
-      "Issuer": "https://localhost:7004",
-      "Audience": "https://localhost:7004",
+  "ConnectionStrings": {
+    "Default": "Data Source=(localdb)\\localdbdemo;Integrated Security=True"
+  },
 
-      //👇 Used to encrypt and decrypt the jwt token
-      "SigningKey": "some-signing-key-here",
+  "AllowedHosts": "*",
+  "SFTPSetting": {
+    "Port": "80"
+  },
+  "JwtOptions": {
+    "Issuer": "https://localhost:7004",
+    "Audience": "https://localhost:7004",
 
-      // token expiration time
-      "ExpirationSeconds": 3600
-    }
+    //👇 Used to encrypt and decrypt the jwt token
+    "SigningKey": "some-signing-key-here",
 
+    // token expiration time
+    "ExpirationSeconds": 3600
+  },
+  "MailSettings": {
+    "Server": "send.smtp.mailtrap.io",
+    "Port": 587,
+    "SenderName": "Your sender name",
+    "SenderEmail": "Your sender email",
+    "UserName": "Your username",
+    "Password": "Your password"
   }
+
+}
