--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,10 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\localdbdemo;Integrated Security=True"
+    "Default": "Server=(localdb)\\localdbdemo; Database=NewApiDb;Trusted_Connection=True;TrustServerCertificate=Yes;",
+
   },
+ 
 
   "AllowedHosts": "*",
   "SFTPSetting": {
